# learn_rust_lang

./: Cargo.toml
problems/mipt/combinations/src/: lib.rs
problems/mipt/conway/src/: lib.rs
problems/mipt/flatmap/src/: lib.rs
problems/mipt/itertools/src/: lib.rs
problems/mipt/itertools/tests/: tests.rs
problems/mipt/lru-cache/src/: lib.rs
problems/mipt/min-queue/src/: lib.rs
problems/mipt/mpsc/: Cargo.toml
problems/mipt/mpsc/src/: lib.rs
problems/mipt/mpsc/tests/: tests.rs
problems/mipt/prefix/src/: lib.rs
problems/mipt/trust/src/: lib.rs
problems/shad/comm/: Cargo.toml  README.md
problems/shad/comm/benches/: benches.rs
problems/shad/comm/src/: main.cpp  main.rs
problems/shad/comm/tests/: tests.rs
problems/shad/puzzle/src/: lib.rs
problems/shad/puzzle/tests/: tests.rs
