[workspace]
members = [

# Intro
    "problems/mipt/combinations",
    "problems/mipt/conway",
    "problems/mipt/min-queue",

# Library Collections
    "problems/mipt/prefix",
    "problems/mipt/lru-cache",

# Traits
    "problems/mipt/trust",
    "problems/mipt/mpsc",
    "problems/mipt/itertools",
    
###############################################################################

# Basics
    "problems/shad/comm",
    "problems/shad/puzzle",
]